career event revisions; more translation stuff

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -405,12 +405,13 @@
     "Construct.system.structure": "Hülle",
     "Construct.system.weapons": "Waffen",
 
-    "Page.title.career": "Karriere",
     "Page.title.careerEvent": "Karriereereignis",
+    "Page.title.careerLength": "Karrierelänge",
     "Page.title.characterType": "Art des Charakters",
     "Page.title.creditsPage": "Danksagungen",
     "Page.title.customSpaceframe": "Eigene Klasse erstellen",
     "Page.title.customSpeciesDetails": "Details zur selbst erschaffenen Spezies",
+    "Page.title.education": "Ausbildung",
     "Page.title.educationDetails": "Details zur Ausbildung",
     "Page.title.environment": "Herkunft",
     "Page.title.environmentDetails": "Details über die Herkunft",
@@ -426,14 +427,12 @@
     "Page.title.sectorDetails": "Sektordetails",
     "Page.title.simpleStarship": "Vereinfachte Raumschifferschaffung",
     "Page.title.smallCraftStats": "Shuttle-Werte",
-    "Page.title.soloCareerEvent": "Karriereereignis",
-    "Page.title.soloCareerEvent1": "Karriereereignis 1",
-    "Page.title.soloCareerEvent2": "Karriereereignis 2",
-
-    "Please": "Karriereereignisdetails",
-
-    "Page.title.soloCareerEventDetails1": "Karriereereignisdetails 1",
-    "Page.title.soloCareerEventDetails2": "Karriereereignisdetails 2",
+    "Page.title.careerEvent": "Karriereereignis",
+    "Page.title.careerEvent1": "Karriereereignis 1",
+    "Page.title.careerEvent2": "Karriereereignis 2",
+    "Page.title.careerEventDetails": "Karriereereignisdetails",
+    "Page.title.careerEventDetails1": "Karriereereignisdetails 1",
+    "Page.title.careerEventDetails2": "Karriereereignisdetails 2",
     "Page.title.soloCareerLength": "Karrierelänge",
     "Page.title.soloConstructType": "Werkzeug-Auswahl",
     "Page.title.soloEarlyOutlook": "Erziehung",
@@ -464,6 +463,8 @@
     "Page.title.modificationComplete": "Änderung abgeschlossen",
     "Page.title.npcConfiguration": "Anpassung zufälliger NSCs",
     "Page.title.tokenCreationPage": "Tokenerschaffung",
+    "Page.title.upbringing": "Erziehung",
+    "Page.title.upbringingDetails": "Erziehungsdetails",
 
     "Page.breadcrumb.characterCreation": "Charaktererschaffung",
     "Page.breadcrumb.starshipCreation": "Raumschifferschaffung",
