--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -334,7 +334,7 @@
     "Construct.system.structure": "Structure",
     "Construct.system.weapons": "Armes",
 
-    "Page.title.career": "Carrière",
+    "Page.title.careerLength": "Carrière",
     "Page.title.characterType": "Type de personnage",
     "Page.title.creditsPage": "Crédits",
     "Page.title.customSpaceframe": "Création de Modèle de Vaiseau",
