--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -334,6 +334,7 @@
     "Construct.system.structure": "Structure",
     "Construct.system.weapons": "Armes",
 
+    "Page.title.attributesAndDisciplines": "Touches Finales",
     "Page.title.careerLength": "Carrière",
     "Page.title.characterType": "Type de personnage",
     "Page.title.creditsPage": "Crédits",
