initial sketching out work on generic tables; - add El-Aurian character, including code for extra focus

--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -786,6 +786,10 @@ ExtraType.smallBindi,Small Bindi,Kleines Bindi,,
 ExtraType.risanSymbol,Risian Symbol,Risanisches Symbol,,
 ExtraType.inuitTattoo,Inuit Tattoo,Inuit-Tattoo,,
 ExtraType.ferengiHeadFlap,Ferengi Head Flap,Ferengi-Kopftuch,,
+Focus.astronavigation,Astronavigation,,,
+Focus.composure,Composure,,,
+Focus.diplomacy,Diplomacy,,,
+Focus.extraVehicularActivity,Extra-Vehicular Activity,,,
 GovernmentType.name.andorian,Andorian,Andorianer,,Andorien
 GovernmentType.name.bajoran,Bajoran,Bajoraner,,Bajoran
 GovernmentType.name.cardassian,Cardassian,Cardassianer,,Cardassien
@@ -1097,6 +1101,10 @@ Species.edosian.name,Edosian,,,
 Species.edosian.soloDescription,"A long-lived, meticulous, and reflective people. Loosely allied with the Federation, with service in Starfleet rare but not unknown. Tripedal and three- limbed, more stable and capable of multi-tasking than Humans, even if a bit slower.",,,
 Species.efrosian.name,Efrosian,Efrosianer,,
 Species.efrosian.soloDescription,"A musical people from a frozen world devoted to history. Often sought as helm officers and navigators, as well as translators and communications officers thanks to their emphasis on linguistics and oral tradition. Notable in appearance for intense tufts of hair and mustaches.",,,
+Species.elAurian.name,El-Aurian,,,
+Species.elAurian.description,"A species of “listeners” originating in the El-Aurian system, The El-Aurians were a well-traveled species of humanoids who visited many parts of the Milky Way galaxy and beyond. Some El-Aurians had even visited Earth during the 19th century before humanity even knew of their existence. In the mid-23rd century, the El-Aurian race was the victim of a massive Borg invasion, with all but a small fraction of El-Aurians being assimilated or killed and the entire civilization destroyed. The loss of their home world scattered the survivors across the galaxy. By the 24th century few El-Aurians remain and with no established civilization or home wander as nomads of the galaxy. Few of these survivors have even taken up a career in Starfleet, hoping to find a community they lost so long ago.",,,
+Species.elAurian.exampleValue,"I told you, I listen",,,
+Species.elAurian.traitDescription,"This species are masters of the art of listening. They understand that listening is an active skill, and involves taking into consideration such things as body language, tone of voice, as well as the words that other beings are speaking. El-Aurians may use this trait to reduce the Difficulty of Social Interaction Tasks. El-Aurians know that time is on their side, they never really feel a need to rush. When performing an Extended Task, an El-Aurian may make one free Re-Roll Work without a spend of Momentum. Since they destroyed the El-Aurian home world, most El-Aurians are distrustful of or outright hate the Borg.",,,
 Species.ferengi.name,Ferengi,Ferengi,,
 Species.ferengi.soloDescription,"An enterprising people devoted to applying their considerable technology toward the acquisition of wealth. Encountered by Starfleet in 2364 and forming a wide variety of relationships to the Federation, being organized as a collection of private businesses. Possessed of large, sensitive ears which supply an acute sense of hearing and the lobes for business acumen.",,,
 Species.gorn.name,Gorn,,,
